--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -49,4 +49,4 @@
 
 <p>Unhappy? <%= button_to "Cancel my account",registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", articles_path %>
+<%= link_to "Back", users_path %>
