--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,11 @@
 <% @vendors.each do |vendor| %>
   <% if vendor.user_id == current_user.id %>
     <div align="right">
-    <%= link_to 'Vendor Dashboard',vendor_path(vendor)%><br>
+    <%= link_to 'Vendor Dashboard',vendor_path(vendor) , class:"btn btn-primary"%><br>
     </div>
   <% end %>
 <% end %>
+
 
 <h1>Listing Vendors</h1>
 <%= form_tag(vendors_path, :method => "get", id: "search-form") do %>
