--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="field"><%= f.label :birthdate %><br />
-<%= f.text_field :birthdate %>
+<%= f.date_field :birthdate, autofocus: true, class: "form-control" %>
 </div>
 
 <div class="field"><%= f.label :timezone %><br />
