--- a/app/views/products/_choice_fields.html.erb
+++ b/app/views/products/_choice_fields.html.erb
@@ -1,26 +1,51 @@
-<div class="card" style="width: 30rem;">
-<div class='nested-fields'>
-<div class="field">
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-</div>
-<div class="field">
-  <%= f.check_box :allow_multiple %>
-  <%= f.label :allow_multiple %>
-</div>
-<%= link_to_remove_association "remove choice", f ,class:"btn btn-primary" %>
-<br>
-<br>
+<div class="col-md-9" style="background-color: #f1f1f1l">
+  <div class="form-group choiceBox nested-fields">
+    <div class="choicediv">
 
-<div class="options">
- <%= f.fields_for :options do |option| %>
-   <%= render 'option_fields', :f => option %>
- <% end %>
- </div>
- <br>
- <%= link_to_add_association 'add option', f, :options , class: 'btn btn-primary', data:
- { association_insertion_node: '.options' , association_insertion_method: :append } %>
- <br>
+      <div class="position_lines">
+        <%= f.hidden_field  :position , value: '1' %>  
+      </div>
+      
+      <div class="field">
+        <%= f.text_field :name , class: 'form-control', placeholder: 'Choice Name' %>
+      </div>
+
+      <div class="field">
+        <%= f.label :allows_multiple %> &nbsp;&nbsp;&nbsp;
+        <label class="switch checkbox-inline">
+          <%= f.check_box :allow_multiple %>
+          <span class="slider round"></span>
+        </label> 
+      </div>
+
+      <div>
+        <%= f.hidden_field :_destroy %> 
+        <%= link_to 'Delete' , class: 'text-danger btn-delete slide-up-section btn btn-primary btn-border btn-remove remove_fields dynamic' do %>
+          <i class="fas fa-trash-alt"></i>
+          <% end %>
+      </div>
+
+    
+      </div>
+      <div class="optionRecords">
+        <div id="nested_options_new_choices_field"></div>
+      
+          <%= f.fields_for :options do |option| %>
+            <%= render 'option_fields', f: option %>
+          <% end %>
+
+        <div class="row">
+        <div class="col-md-12 text-right">
+        <%= link_to_add_association 'Add option', f , :options , class: 'btn btn-border'%>
+        </div>
+     
+        </div>
+     
+      </div>
+
+    
+   
+  </div>
+  
+  
 </div>
-</div>  
-<br>
