--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'product' %>
     <%= javascript_pack_tag 'autocomplete-rails.js' %>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- 
-
+    
 
   </head>
 
@@ -30,27 +27,6 @@
   </div>
 
   </body>
-
-  <footer class="footer">
-  <div class="col-md-2">
-    <div class="logo">
-      <a href="\">
-      <%= image_tag("logos/logo.png")%>
-      </a>
-    </div>
-  </div>
-  <div class="col-md-8 centerText">
-    <ul class="footerMenu">
-      <li>   
-      <% if user_signed_in? %>
-        <% if current_user.vendor %>
-          <%= link_to 'Vendor Dashboard' , vendor_path(current_user.vendor) %>
-        <% else %>
-         <%= link_to 'Become vendor ?' , new_vendor_path %>
-        <% end %>
-      <% end %>
-      </li>
-    </ul>
-  </div>
-</footer>
+  <%= render 'layouts/footer' %>
+ 
 </html>
