push code in new branch

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,86 +1,65 @@
+<br/>
+<div align="left">
+<%= link_to image_tag("logos/back.png", {:style => "width:40px;"}),vendor_products_path%>Back<br>
+</div>
 
-<body class= "gray">
-<div class='content'>
-<div class='page-inner hasButton'>
-<div class='page-header'>
-<h4 class='page-title'>Add Menu Item</h4>
+<h2 class="mt-4">Edit Menu Item</h2>
 
-</div>
-</div>
-</div>
-<div align="right">
-<%= link_to 'Back to menu',vendor_products_path, class:"btn btn-primary"%><br>
-</div>
-</div>
-<div class='page-inner'>
 
-<%= form_with(model: [ @vendor, @product], local: true) do |f| %> 
-
-<ul class="nav nav-tabs nav-line nav-color-primary bb-0",role="tablist" >
-<li class="nav-item" >
+<%= form_with(model: [ @vendor, @product], local: true) , :html => { :id => "edit_product" } do |f| %> 
+  <div class="form-group">
 <%= f.radio_button :is_catering, false %> Regular
-</li>
 &nbsp&nbsp&nbsp&nbsp
-<li class="nav-item">
-<%= f.radio_button :is_catering, true %> Catering
-</li>
-</ul>
-<div class="row">
-<div class="col-md-6">
- <div class="form-group col-md-6">
-  <%= f.label :Item_name %><span class="red"> * </span><br />
+<%= f.radio_button :is_catering, true %> Catering <br />
+</div>
+<div class="form-group">
+  <%= f.label :Item_name %>
   <%= f.text_field :name , class:' form-control' %>
 </div>
 
-<div class="form-group col-md-6">
-      <%= f.label :Item_price %><span class="red"> * </span>
+<div class="form-group">
+      <%= f.label :Item_price %>
       <div class="input-group-prepend">
         <span class="input-group-text">$</span>
         <%= f.text_field :cost_in_dollars , class: 'form-control' , placeholder: '0.0' , type: 'integer' %> 
       </div>
     </div>
       <div class="form-group">
-        <%= f.label :description %><span class="red"> * </span><br />
+        <%= f.label :description %>
         <%= f.text_area  :description , rows: 4, class: 'form-control' %>
       </div> 
       <div class="form-group">
-        <%= f.label :menu_category %><span class="red"> * </span><br />
+        <%= f.label :menu_category %>
         <%= f.select :menu_category, menu_category, :prompt => 'Select One', class: 'form-control' %><br />
       </div>
       <div class="form-group">
-        <%= f.label :tags %><br />
+        <%= f.label :tags %>
         <%= f.text_field  :item_tags , class: 'form-control' %>
       </div>
-      <div class="form-group col-md-3">
+      <div class="form-group">
         <h4><%= f.label :Availability %></h4>
         <label class="switch checkbox-inline">
           <%= f.check_box :availability %>
           <span class="slider round"></span>
         </label> 
       </div>
-      <div class="form-group col-md-3">
+      <div class="form-group">
         <h4><%= f.label :is_popular %></h4>
         <label class="switch checkbox-inline">
           <%= f.check_box :popular %>
           <span class="slider round"></span>
         </label> 
       </div>
-    </div>
-    <div class="col-md-6">
-      <center>
-        <div class="image">
+      <div class="form-group">
           <h4><%= f.label :Menu_Item_Image  %></h4>
           <img id="img_prev" width='200' height='200' src="#" alt="your image" class="img-thumbnail hidden"/> <br/>
           <%= f.file_field :item_image, id: 'image-upload' , class: 'form-control' %>
-        </div>
-      </center>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
+      </div>
+      <div class="form-group">
       <h2 class="mt-4">Choices (Create Up to 10)</h2>
       <hr>
       <div id="choices">
+       
       <%= f.fields_for :choices do |choice| %>
         <%= render 'choice_fields', f: choice %>
       <% end %>
