--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,14 +2,42 @@
 <div class="container-fluid">
 <div class="navbar-header">
   <div class="logo" align="left">
-    <a href="\">
     <%= image_tag("logos/logo.png")%>
-    </div>
-  </a>
+   </div>
+   <center>
+   <%= form_tag(vendors_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search" ,class:"search"%>
+    <%= submit_tag "Search" ,class:"btn btn-success"%>
+  <% end %>
+  </center>
   <div align="right">
     <% if user_signed_in? %>
-      <%= link_to 'Profile' , edit_user_registration_path , class: 'btn btn-default' %>
-      <%= link_to 'Logout' , destroy_user_session_path , method: :delete ,class: 'btn btn-default' %>
+    <%= link_to 'Profile',edit_user_registration_path,class: 'btn btn-default'%>
+      <button class= 'btn btn-default' dropdown-toggle" type="button" data-toggle="dropdown">
+      <%= image_tag("logos/user2.png", {:style => "width:25px;"}) %>
+      <span class="caret"></span></button>
+      <ul class="dropdown-menu">
+        <li class="dropdown-header"></li>
+        <% if user_signed_in? %>
+        <li>
+        <%= link_to 'Home',vendors_path(current_user)%>
+        </li>
+        <li>
+        <%= link_to 'User Dashboard',edit_user_path(current_user)%>
+        </li>
+        <% if current_user.vendor %>
+        <li>
+        <%= link_to 'Vendor Dashboard' , vendor_path(current_user.vendor)%>
+        </li>
+        <% else %>
+        <li>
+      <%= link_to 'Become vendor ?' , new_vendor_path%>
+      </li>
+      <% end %>
+      <hr>
+      <%= link_to 'Logout' , destroy_user_session_path , method: :delete  %>
+      <% end %>
+    </ul>
     <% else %>
       <%= link_to 'Sign in' , new_user_session_path , class: 'btn btn-default' %>
       <%= link_to 'Sign up' , new_user_registration_path , class: 'btn btn-default' %>
