--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,15 +10,15 @@
  
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" ,  class: "input-group-text"%>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" ,  class: "input-group-text" ,required: true%>
   </div>
 
   <div class="field"><%= f.label :name %><br />
-        <%= f.text_field :name %>
+        <%= f.text_field :name ,required: true%>
   </div>
 
   <div class="field"><%= f.label :phone %><br />
-  <%= f.text_field :phone %>
+  <%= f.text_field :phone ,required: true%>
 </div>
 
 <div class="field"><%= f.label :birthdate %><br />
@@ -36,19 +36,16 @@
   <br />
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don not want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" , class: "input-group-text" %>
+    <%= f.password_field :password, autocomplete: "new-password" ,id:"user_password", class: "input-group-text" %>
     <% if @minimum_password_length %>
+    
     <% end %>
   </div>
   <br />
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "input-group-text" %>
-  </div>
   <br />
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" , class: "input-group-text"%>
+    <%= f.password_field :current_password, autocomplete: "current-password" , class: "input-group-text" ,required: true%>
   </div>
   <br />
   <div class="actions">
