--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
   <div class="form-group">
     <%= f.label :email %><span class="red">*</span><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" , required: true%>
   </div>
   </div>
 
@@ -13,14 +13,14 @@
   <div class="row">
   <div class="form-group">
     <%= f.label :name %><span class="red">*</span><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name , required: true %>
   </div>
   </div>
 
   <div class="row">
   <div class="form-group">
   <%= f.label :phone %><span class="red">*</span><br />
-    <%= f.text_field :phone %>
+    <%= f.text_field :phone , required: true%>
   </div> 
   </div>
 
@@ -30,14 +30,14 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, id:"user_password",autocomplete: "new-password" , required: true%>
   </div>
   </div>
 
   <div class="row">
   <div class="form-group">
     <%= f.label :password_confirmation %><span class="red">*</span><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true %>
   </div>
   </div>
 
@@ -50,4 +50,4 @@
 </div>
 <% end %>
 </br>
-<%= render "devise/shared/links" %>
+
