--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DevisePro</title>
+    <title>Food</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'product' %>
-    <%= javascript_pack_tag 'autocomplete-rails.js' %>
     
-
+    <%= javascript_pack_tag 'product' %>
   </head>
+  
 
   <body>    
   <%= render 'layouts/header' %>
-
   <div class="container">
-  <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %> alert-dismissible" role="alert">
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %> alert-dismissible" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       <%= value %>
-     </div>
-  <% end %>
-
+      </div>
+    <% end %>
     <%= yield %>
   </div>
-
   </body>
   <%= render 'layouts/footer' %>
- 
 </html>
