--- a/app/views/products/_modal.html.erb
+++ b/app/views/products/_modal.html.erb
@@ -1,30 +1,1 @@
-<div class="modal fade" id="myModal"  role="dialog" >
-                  <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                      <div class="modal-header" align="left">
-                       
-                        <h4 class="modal-title" >All Choices</h4>
-                      </div>
-                      <div class="modal-body">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <div class="item-choices">
-                              <h2>Choices</h2>
-                            </div>
-                    </div>
-                        </div>
-                      </div>
-
-                      <div class="modal-footer">
-                      <div align="left">
-                      <span class="red"> * </span> &nbsp;&nbsp;&nbsp;
-means such choice will allow customer to choose only one option from the all options available for that choice while ordering
-                      </div>
-                      <div align="right">
-                      <img src="/assets/logos/avc.svg" alt="Startorder" size="40px"/>
-                      </div>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
+<div class='modal fade' id='myModal'  role='dialog' tabindex='-1'  aria-labelledby='myModalLabel' aria-hidden='true'>  <div class='modal-dialog modal-md'>   <div class='modal-content'> <div class='modal-header'> <h4 class='modal-title'>All Choices</h4> <button type='button' class='close' data-dismiss='modal'>&times;</button> </div> <div class='modal-body'> <div class='row'> <div class='col-md-6'> <div class='item-choices'><% @product.choices.each do |c| %> <%= c.name %><br /> <% c.options.each do |o| %> <div class='badge'> <%= o.name %> &nbsp;&nbsp; <%= o.cost_in_dollars %> <br /> </div> <% end %> <% end %></div></div></div> <div class='noteMenu'> <span class='red'> * </span> &nbsp;&nbsp;&nbsp;   means such choice will allow customer to choose only one option from the all options available for that choice while ordering </div></div>   <div class='modal-footer'>  <button type='button' class='btn btn-default' data-dismiss='modal'>Close</button></div></div></div></div>
